[package]
name = "macros"
version = "0.1.0"
authors = ["Kreedzt <zhaozisong1@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hello_macro = { path = "./src/hello_macro" }
hello_macro_derive = { path = "./src/hello_macro_derive" }